# kedro-onnx

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yml
docs/: conf.py  index.rst
docs/source/: api.md  conf.py  contributing.md  frameworks.md  index.md  usage.md
junit/: test-results.xml
kedro_onnx/: __init__.py  datasets.py  typing.py  utils.py
kedro_onnx/inference/: __init__.py  inference.py
kedro_onnx/io/: __init__.py  datasets.py
tests/: __init__.py  conftest.py  test_quality.py  test_validation.py
tests/linear_regression/: README.md  pyproject.toml
tests/linear_regression/conf/base/catalog/: ds.yml
tests/linear_regression/data/01_raw/: x.json  y.json
tests/linear_regression/data/05_model_input/: x_test.json
tests/linear_regression/src/LinReg/: pipeline_registry.py  settings.py
tests/linear_regression/src/LinReg/pipelines/: ds.py
