# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = kedro_onnx
description = Adds ONNX support to Kedro
author = nickolasrm
author_email = nickolasrochamachado@gmail.com
license = Apache-2.0
license_files = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/markdown; charset=UTF-8
url = https://pypi.org/project/kedro-onnx/
# Add here related links, for example:
project_urls =
    Documentation = https://pyscaffold.org/
    Source = https://github.com/nickolasrm/kedro-onnx

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires = >=3.9
zip_safe = False
install_requires =
    kedro==0.18.2

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-mock
docs =
    sphinx
    sphinx-copybutton
    sphinx-autodoc-typehints
    sphinx-autoapi
dev =
    %(test)s
    %(docs)s
    yapf
    pre-commit

[options.packages.find]
exclude =
    tests*
    docs*
